cache and small fixes

--- a/diensten/dakherstellingen-hellende-daken.html
+++ b/diensten/dakherstellingen-hellende-daken.html
@@ -12,6 +12,7 @@
     <meta name="author" content="Dakreiniging LM" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1D4ED8" />
+
     <link rel="canonical" href="https://www.dakreiniginglm.be/dakherstellingen-hellende-daken.html">
 
     <meta property="og:title" content="Dakherstellingen Hellende Daken | Dakreiniging LM" />
@@ -34,7 +35,7 @@
     <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
     <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
-    <link rel="stylesheet" href="/assets/css/output.css">
+    <link rel="stylesheet" href="/assets/css/output.css?v=20250713">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y6ZMGVS5NW"></script>
     <script>
@@ -246,16 +247,16 @@
         </div>
     </footer>
 
-    <script src="../assets/js/bundle-sub.js" defer></script>
+    <script src="../assets/js/bundle-sub.js?v=20250713" defer></script>
     <script type="application/ld+json">
         {
-        "@context": "https://schema.org",
-        "@type": "Service",
-        "serviceType": "Dakherstellingen - Hellende Daken",
-        "name": "Dakherstellingen Hellende Daken door Dakreiniging LM",
-        "description": "Snelle en professionele dakherstellingen voor lekkages, stormschade en algemene slijtage aan hellende daken in de regio Herentals en Groot-Leuven. Inclusief gratis dakcontrole.",
-        "url": "https://www.dakreiniginglm.be/dakherstellingen-hellende-daken.html",
-        "provider": {
+          "@context": "https://schema.org",
+          "@type": "Service",
+          "serviceType": "Dakherstellingen - Hellende Daken",
+          "name": "Dakherstellingen Hellende Daken door Dakreiniging LM",
+          "description": "Snelle en professionele dakherstellingen voor lekkages, stormschade en algemene slijtage aan hellende daken in de regio Herentals en Groot-Leuven. Inclusief gratis dakcontrole.",
+          "url": "https://www.dakreiniginglm.be/dakherstellingen-hellende-daken.html",
+          "provider": {
             "@type": "LocalBusiness",
             "@id": "https://www.dakreiniginglm.be/#organization",
             "name": "Dakreiniging LM",
@@ -263,59 +264,70 @@
             "url": "https://www.dakreiniginglm.be",
             "telephone": "+32 473 67 19 44",
             "address": {
-            "@type": "PostalAddress",
-            "addressLocality": "Herentals",
-            "postalCode": "2200",
-            "addressCountry": "BE"
+              "@type": "PostalAddress",
+              "addressLocality": "Herentals",
+              "postalCode": "2200",
+              "addressCountry": "BE"
             },
             "priceRange": "€€",
             "sameAs": [
-            "https://www.linkedin.com/in/michielve"
+              "https://www.linkedin.com/in/michielve"
             ]
-        },
-        "areaServed": [
-            { "@type": "AdministrativeArea", "name": "Herentals" },
-            { "@type": "AdministrativeArea", "name": "Leuven" }
-        ],
-        "hasOfferCatalog": {
+          },
+            "areaServed": [
+                { "@type": "AdministrativeArea", "name": "Leuven" },
+                { "@type": "AdministrativeArea", "name": "Bierbeek" },
+                { "@type": "AdministrativeArea", "name": "Boutersem" },
+                { "@type": "AdministrativeArea", "name": "Lubbeek" },
+                { "@type": "AdministrativeArea", "name": "Holsbeek" },
+                { "@type": "AdministrativeArea", "name": "Rotselaar" },
+                { "@type": "AdministrativeArea", "name": "Herent" },
+                { "@type": "AdministrativeArea", "name": "Haacht" },
+                { "@type": "AdministrativeArea", "name": "Keerbergen" },
+                { "@type": "AdministrativeArea", "name": "Aarschot" },
+                { "@type": "AdministrativeArea", "name": "Diest" },
+                { "@type": "AdministrativeArea", "name": "Scherpenheuvel" },
+                { "@type": "AdministrativeArea", "name": "Bekkevoort" },
+                { "@type": "AdministrativeArea", "name": "Kortenaken" },
+                { "@type": "AdministrativeArea", "name": "Glabeek" },
+                { "@type": "AdministrativeArea", "name": "Linter" },
+                { "@type": "AdministrativeArea", "name": "Tienen" },
+                { "@type": "AdministrativeArea", "name": "Herentals" }
+            ],
+          "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "Dakherstellingen Hellende Daken Services",
             "itemListElement": [
-            {
+              {
                 "@type": "Offer",
                 "itemOffered": {
-                "@type": "Service",
-                "name": "Lekkage opsporen hellend dak"
+                  "@type": "Service",
+                  "name": "Lekkage opsporen hellend dak"
                 }
-            },
-            {
+              },
+              {
                 "@type": "Offer",
                 "itemOffered": {
-                "@type": "Service",
-                "name": "Stormschade herstel hellend dak"
+                  "@type": "Service",
+                  "name": "Stormschade herstel hellend dak"
                 }
-            },
-            {
+              },
+              {
                 "@type": "Offer",
                 "itemOffered": {
-                "@type": "Service",
-                "name": "Slijtage herstel dakpannen"
+                  "@type": "Service",
+                  "name": "Slijtage herstel dakpannen"
                 }
-            },
-            {
+              },
+              {
                 "@type": "Offer",
                 "itemOffered": {
-                "@type": "Service",
-                "name": "Gratis dakcontrole"
+                  "@type": "Service",
+                  "name": "Gratis dakcontrole"
                 }
-            }
+              }
             ]
-        },
-        "aggregateRating": {
-            "@type": "AggregateRating",
-            "ratingValue": "5",
-            "reviewCount": "6"
-        }
+          }
         }
 </script>
 
