--- a/privacy.html
+++ b/privacy.html
@@ -32,7 +32,7 @@
   <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
   <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
-  <link rel="stylesheet" href="assets/css/output.css">
+  <link rel="stylesheet" href="assets/css/output.css?v=20250713">
 </head>
 
 <body class="bg-white text-gray-800 leading-relaxed">
@@ -166,7 +166,7 @@
     </div>
   </footer>
 
-  <script src="assets/js/bundle-sub.js" defer></script>
+  <script src="assets/js/bundle-sub.js?v=20250713" defer></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
