--- a/diensten/dakherstellingen-platte-daken.html
+++ b/diensten/dakherstellingen-platte-daken.html
@@ -2,31 +2,32 @@
 <html lang="nl" class="scroll-smooth scroll-pt-16 sm:scroll-pt-8">
 
 <head>
-  <meta http-equiv="Content-Language" content="nl">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Content-Language" content="nl">
+
+  <title>Platte Daken Herstellen & Onderhoud | Waterdichte Oplossingen | Dakreiniging LM</title>
   <meta name="description"
-    content="Professionele dakreiniging & ontmossen door Dakreiniging LM in Herentals. Verwijder mos, algen en vuil van hellende en platte daken voor een langere levensduur. Vraag uw offerte aan!" />
-  <meta name="keywords"
-    content="dakreiniging, ontmossen, dak reinigen, mos dak, algen dak, dak coaten, dak impregneren, dakgoot reinigen, Herentals, Leuven" />
+    content="Specialist in herstellingen en onderhoud van platte daken (EPDM, roofing, PVC) in Herentals en omgeving. Voorkom lekkages en verleng de levensduur met onze professionele service. Vraag advies aan!" />
   <meta name="author" content="Dakreiniging LM" />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#1D4ED8" />
 
-  <meta property="og:title" content="Dakreiniging & Ontmossen | Dakreiniging LM" />
+  <link rel="canonical" href="https://www.dakreiniginglm.be/dakherstellingen-platte-daken.html">
+
+  <meta property="og:title" content="Platte Daken Herstellen & Onderhoud | Dakreiniging LM" />
   <meta property="og:description"
-    content="Specialist in dakreiniging, ontmossen en coaten van daken in de regio Herentals en Leuven. Vraag een gratis offerte aan." />
+    content="Professionele onderhoudsdiensten en herstellingen voor platte daken (EPDM, roofing) in de regio Herentals en Leuven. Voorkom problemen met preventief onderhoud." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.dakreiniginglm.be/dakreiniging-ontmossen.html" />
+  <meta property="og:url" content="https://www.dakreiniginglm.be/dakherstellingen-platte-daken.html" />
   <meta property="og:image" content="https://www.dakreiniginglm.be/assets/dak.webp" />
   <meta property="og:site_name" content="Dakreiniging LM" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Dakreiniging & Ontmossen | Dakreiniging LM" />
+  <meta name="twitter:title" content="Platte Daken Herstellen & Onderhoud | Dakreiniging LM" />
   <meta name="twitter:description"
-    content="Laat uw dak professioneel reinigen en ontmossen. Verleng de levensduur van uw dak met onze milieuvriendelijke aanpak." />
+    content="Houd uw plat dak in topconditie met onze expertise. Specialist in herstellingen, reiniging en preventief onderhoud voor alle platdaktypes." />
   <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/dak.webp" />
-
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
   <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
@@ -34,11 +35,7 @@
   <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
   <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
-  <link rel="stylesheet" href="/assets/css/output.css">
-
-  <link rel="canonical" href="https://www.dakreiniginglm.be/dakreiniging-ontmossen.html">
-
-  <title>Dakreiniging & Ontmossen | Professionele Dakreiniging | Dakreiniging LM</title>
+  <link rel="stylesheet" href="/assets/css/output.css?v=20250713">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y6ZMGVS5NW"></script>
   <script>
@@ -111,12 +108,11 @@
   </nav>
 
   <main role="main">
-    <section class="relative bg-cover bg-center h-80 md:h-96"
-      style="background-image: url('/assets/img/banner/ontmossen.webp');">
+    <section class="relative bg-cover bg-top h-80 sm:h-80 md:h-96"
+      style="background-image: url('/assets/img/diensten/plat_dak.webp');">
       <div class="absolute inset-0 bg-black/50 flex items-center justify-center">
         <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white text-center drop-shadow-lg pt-24 md:pt-0">
-          Dakreiniging &
-          Ontmossen</h1>
+          Platte Daken Herstellen & Onderhoud</h1>
       </div>
     </section>
 
@@ -124,33 +120,28 @@
       <div class="max-w-4xl mx-auto">
         <div class="space-y-6 text-gray-800 leading-relaxed">
           <p class="text-lg">
-            Een schoon dak is essentieel voor de levensduur en uitstraling van uw woning. Mos, algen en vuil zorgen niet
-            alleen voor een onverzorgde look, maar kunnen ook blijvende schade veroorzaken aan uw dakbedekking en
-            structuur. Denk hierbij aan vochtproblemen, verzwakte materialen en zelfs lekkages.
-          </p>
-          <p class="text-lg">
-            Bij Dakreiniging LM, uw betrouwbare partner in de regio Herentals en Groot-Leuven, bieden we grondige
-            dakreiniging en ontmossing aan. Dit doen we voor zowel hellende daken (pannen, leien) als platte
-            daken (roofing, EPDM, PVC). We werken met zorg voor uw dak én het milieu, en zorgen dat uw dak weer
-            jarenlang mee kan.
+            Platte daken, zoals die met EPDM, roofing of PVC, vereisen regelmatig en gespecialiseerd onderhoud om
+            hun waterdichtheid en functionaliteit te garanderen. Problemen zoals lekkages, scheuren, blaasvorming en
+            verstoppingen van afvoeren zijn veelvoorkomend en kunnen leiden tot aanzienlijke schade aan uw woning. Bij
+            Dakreiniging LM bieden we uitgebreide onderhouds&dash; en hersteldiensten aan voor platte daken van alle
+            types&dash;altijd snel, grondig en professioneel uitgevoerd door ons ervaren team van vader en zoon.
           </p>
 
           <h2 class="text-2xl sm:text-3xl font-bold text-blue-800 mt-12 mb-6 flex items-center gap-3">
-            <i class="fas fa-wrench text-blue-700"></i> Onze Aanpak voor Dakreiniging & Ontmossen
+            <i class="fas fa-wrench text-blue-700"></i> Wat Omvat Ons Onderhoud?
           </h2>
           <p class="text-lg">
-            Ons proces is zorgvuldig en efficiënt, ontworpen om uw dak grondig te reinigen en te beschermen, stap voor
-            stap:
+            Ons grondige onderhoudsplan voor platte daken omvat de volgende cruciale stappen:
           </p>
           <ol class="list-none list-outside space-y-6 text-lg pl-6">
             <li class="relative pb-4">
               <div class="flex items-start">
                 <div class="flex-shrink-0 mr-4 text-blue-700 text-3xl font-bold">1.</div>
                 <div>
-                  <h3 class="font-bold text-xl mb-1 text-blue-800">Grondige Inspectie</h3>
-                  <p>We starten altijd met een gedetailleerde inspectie van uw dak om de staat van de dakbedekking vast
-                    te stellen en eventuele beschadigingen of zwakke plekken te identificeren voordat we beginnen met
-                    reinigen. Zo garanderen we een veilige en effectieve aanpak op maat.</p>
+                  <h3 class="font-bold text-xl mb-1 text-blue-800">Grondige Inspectie en Reiniging</h3>
+                  <p>We starten met een gedetailleerde inspectie van de gehele dakbedekking. Hierbij sporen we
+                    beginnende scheurtjes, blazen of andere zwakke plekken op. Aansluitend reinigen we het dakoppervlak
+                    grondig van vuil, bladeren en mos, voor een optimale basis.</p>
                 </div>
               </div>
             </li>
@@ -158,10 +149,10 @@
               <div class="flex items-start">
                 <div class="flex-shrink-0 mr-4 text-blue-700 text-3xl font-bold">2.</div>
                 <div>
-                  <h3 class="font-bold text-xl mb-1 text-blue-800">Verwijderen van Mos, Algen en Vuil</h3>
-                  <p>Met professionele apparatuur en aangepaste technieken verwijderen we alle ongewenste begroeiing en
-                    vuil van uw dak. Dit gebeurt op een veilige manier die uw dakbedekking niet beschadigt, voor een
-                    direct zichtbaar schoner resultaat.</p>
+                  <h3 class="font-bold text-xl mb-1 text-blue-800">Afvoeren en Tappen Controleren & Reinigen</h3>
+                  <p>Verstopte afvoeren zijn een veelvoorkomende oorzaak van problemen bij platte daken. Wij controleren
+                    en reinigen alle dakafvoeren, tapgaten en hemelwaterafvoeren om een optimale waterafvoer te
+                    garanderen en stilstaand water te voorkomen.</p>
                 </div>
               </div>
             </li>
@@ -169,10 +160,10 @@
               <div class="flex items-start">
                 <div class="flex-shrink-0 mr-4 text-blue-700 text-3xl font-bold">3.</div>
                 <div>
-                  <h3 class="font-bold text-xl mb-1 text-blue-800">Reinigen van Dakgoten en Afvoeren</h3>
-                  <p>Een essentieel onderdeel van onze service is het grondig reinigen en ontstoppen van uw dakgoten,
-                    regenafvoeren en tapgaten. Dit voorkomt wateroverlast, toekomstige verstoppingen en beschermt de
-                    fundering van uw woning.</p>
+                  <h3 class="font-bold text-xl mb-1 text-blue-800">Herstel van Scheuren en Naden</h3>
+                  <p>Eventuele scheuren, openstaande lasnaden of kleine beschadigingen in de dakbedekking (EPDM,
+                    roofing, PVC) worden ter plaatse professioneel hersteld. Dit voorkomt lekkages en verlengt de
+                    levensduur van uw dak aanzienlijk.</p>
                 </div>
               </div>
             </li>
@@ -180,32 +171,47 @@
               <div class="flex items-start">
                 <div class="flex-shrink-0 mr-4 text-blue-700 text-3xl font-bold">4.</div>
                 <div>
-                  <h3 class="font-bold text-xl mb-1 text-blue-800">Nabehandeling (Optioneel)</h3>
-                  <p>Na het reinigen adviseren we vaak een nabehandeling. Dit kan impregneren zijn, wat het dak
-                    waterafstotend maakt, of het aanbrengen van een speciale dakcoating. Deze behandelingen versterken
-                    het oppervlak, gaan nieuwe mos- en algengroei tegen, verlengen de levensduur en houden uw dak langer
-                    schoon.</p>
+                  <h3 class="font-bold text-xl mb-1 text-blue-800">Preventief Onderhoud en Advies</h3>
+                  <p>Naast directe herstellingen bieden we preventief advies en oplossingen om toekomstige problemen te
+                    voorkomen. Denk hierbij aan het aanbrengen van beschermende lagen of het adviseren over betere
+                    afwatering, zodat uw dak langer meegaat.</p>
                 </div>
               </div>
             </li>
           </ol>
 
           <h2 class="text-2xl sm:text-3xl font-bold text-blue-800 mt-12 mb-6 flex items-center gap-3">
-            <i class="fas fa-leaf text-green-600"></i> Kwaliteit en Milieuvriendelijkheid
+            Extra Voordelen van Kiezen voor Dakreiniging LM
           </h2>
-          <p class="text-lg">
-            Bij Dakreiniging LM staat kwaliteit hoog in het vaandel. We gebruiken uitsluitend milieuvriendelijke
-            reinigingsmiddelen die effectief zijn tegen mos en algen, maar veilig voor uw dak, uw tuin en de omgeving.
-            U krijgt van ons bovendien persoonlijk advies over hoe u nieuwe mosgroei kunt voorkomen en het onderhoud
-            van uw dak zelf kunt optimaliseren.
-          </p>
-          <p class="text-lg">
-            Investeer in de toekomst van uw dak. Een periodieke dakreiniging en ontmossing kan grote herstelkosten in de
-            toekomst voorkomen en zorgt ervoor dat uw woning er altijd piekfijn uitziet.
-          </p>
+          <ul class="list-none space-y-4 text-lg">
+            <li class="flex items-start">
+              <i class="fas fa-check-circle mr-3 text-green-800 text-xl flex-shrink-0 mt-1"></i>
+              <div>
+                <h3 class="font-bold text-xl mb-1 text-blue-800">Persoonlijk Advies op Maat</h3>
+                <p>Elk plat dak is uniek. U krijgt van ons persoonlijk advies dat specifiek is afgestemd op het type en
+                  de staat van uw dak, zodat u altijd de beste zorg ontvangt.</p>
+              </div>
+            </li>
+            <li class="flex items-start">
+              <i class="fas fa-check-circle mr-3 text-green-800 text-xl flex-shrink-0 mt-1"></i>
+              <div>
+                <h3 class="font-bold text-xl mb-1 text-blue-800">Jaarlijkse Onderhoudscontracten</h3>
+                <p>Voor maximale zorg en gemoedsrust bieden we de mogelijkheid tot jaarlijkse onderhoudscontracten. Zo
+                  blijft uw plat dak periodiek gecontroleerd en optimaal beschermd tegen weersinvloeden.</p>
+              </div>
+            </li>
+            <li class="flex items-start">
+              <i class="fas fa-check-circle mr-3 text-green-800 text-xl flex-shrink-0 mt-1"></i>
+              <div>
+                <h3 class="font-bold text-xl mb-1 text-blue-800">Direct Contact, Zonder Tussenpersonen</h3>
+                <p>Alle werkzaamheden worden door onszelf, als ervaren familiebedrijf, uitgevoerd. Dit betekent directe
+                  communicatie, geen onnodige extra kosten en de zekerheid van vakmanschap met oog voor kwaliteit.</p>
+              </div>
+            </li>
+          </ul>
 
           <div class="text-center mt-16">
-            <h3 class="text-2xl font-bold text-blue-900 mb-6">Benieuwd naar de kosten voor uw dakreiniging?</h3>
+            <h3 class="text-2xl font-bold text-blue-900 mb-6">Laat uw plat dak vakkundig onderhouden!</h3>
             <a href="/#contact"
               class="inline-block bg-blue-800 text-white font-semibold px-8 py-4 rounded-lg hover:bg-blue-700 transition duration-300 shadow-lg text-xl">
               Vraag nu een vrijblijvende offerte aan <i class="fas fa-arrow-right ml-2"></i>
@@ -249,14 +255,14 @@
     </div>
   </footer>
 
-  <script src="/assets/js/bundle-sub.js" defer></script>
+  <script src="/assets/js/bundle-sub.js?v=20250713" defer></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Service",
-      "serviceType": "Dakreiniging & Ontmossen",
-      "name": "Dakreiniging & Ontmossen door Dakreiniging LM",
-      "description": "Professionele reiniging, ontmossen en coaten van hellende en platte daken in de regio Herentals en Groot-Leuven. Verwijder mos, algen en vuil voor een langere levensduur van uw dak.",
+      "serviceType": "Dakherstellingen & Onderhoud Platte Daken",
+      "name": "Onderhoud en Herstel Platte Daken door Dakreiniging LM",
+      "description": "Uitgebreide onderhoudsdiensten en herstellingen voor platte daken (EPDM, roofing, PVC) in de regio Herentals en Groot-Leuven. Voorkom lekkages en verleng de levensduur van uw dak.",
       "provider": {
         "@type": "LocalBusiness",
         "name": "Dakreiniging LM",
@@ -271,63 +277,68 @@
         }
       },
       "areaServed": [
-        {
-          "@type": "AdministrativeArea",
-          "name": "Herentals"
-        },
-        {
-          "@type": "AdministrativeArea",
-          "name": "Leuven"
-        }
+          { "@type": "AdministrativeArea", "name": "Leuven" },
+          { "@type": "AdministrativeArea", "name": "Bierbeek" },
+          { "@type": "AdministrativeArea", "name": "Boutersem" },
+          { "@type": "AdministrativeArea", "name": "Lubbeek" },
+          { "@type": "AdministrativeArea", "name": "Holsbeek" },
+          { "@type": "AdministrativeArea", "name": "Rotselaar" },
+          { "@type": "AdministrativeArea", "name": "Herent" },
+          { "@type": "AdministrativeArea", "name": "Haacht" },
+          { "@type": "AdministrativeArea", "name": "Keerbergen" },
+          { "@type": "AdministrativeArea", "name": "Aarschot" },
+          { "@type": "AdministrativeArea", "name": "Diest" },
+          { "@type": "AdministrativeArea", "name": "Scherpenheuvel" },
+          { "@type": "AdministrativeArea", "name": "Bekkevoort" },
+          { "@type": "AdministrativeArea", "name": "Kortenaken" },
+          { "@type": "AdministrativeArea", "name": "Glabeek" },
+          { "@type": "AdministrativeArea", "name": "Linter" },
+          { "@type": "AdministrativeArea", "name": "Tienen" },
+          { "@type": "AdministrativeArea", "name": "Herentals" }
       ],
-      "url": "https://www.dakreiniginglm.be/dakreiniging-ontmossen.html",
+      "url": "https://www.dakreiniginglm.be/dakherstellingen-platte-daken.html",
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
-        "name": "Dakreiniging Services",
+        "name": "Platte Dak Services",
         "itemListElement": [
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Dakreiniging Hellende Daken"
+              "name": "Inspectie plat dak"
             }
           },
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Dakreiniging Platte Daken"
+              "name": "Reiniging dakbedekking plat dak"
             }
           },
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Dak Ontmossen"
+              "name": "Herstel scheuren plat dak"
             }
           },
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Dak Coaten"
+              "name": "Preventief onderhoud plat dak"
             }
           },
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Dakgoot Reiniging"
+              "name": "Jaarlijks onderhoudscontract plat dak"
             }
           }
         ]
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "5", 
-        "reviewCount": "6" 
       }
-    }
+   }
     </script>
 </body>
 
