--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     content="Specialist in dakreiniging, herstellingen en onderhoud in Leuven en omstreken. Familiebedrijf met snelle en persoonlijke service." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.dakreiniginglm.be/" />
-  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/dak.webp" />
+  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/dak.webp?v=20250713-v2" />
   <meta property="og:site_name" content="Dakreiniging LM" />
 
   <!-- Twitter Card -->
@@ -28,17 +28,17 @@
   <meta name="twitter:title" content="Dakreiniging LM | Dakreiniging & Dakherstellingen in Leuven en Omstreken" />
   <meta name="twitter:description"
     content="Vader en zoon zorgen persoonlijk voor uw dakonderhoud, herstelling en reiniging in Leuven en omstreken. Betrouwbaar en lokaal vakmanschap." />
-  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/dak.webp" />
+  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/dak.webp?v=20250713-v2" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
-  <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png?v=20250713-v2" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg?v=20250713-v2" />
+  <link rel="shortcut icon" href="/assets/favicon/favicon.ico?v=20250713-v2" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png?v=20250713-v2" />
   <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
-  <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+  <link rel="manifest" href="/assets/favicon/site.webmanifest?v=20250713-v2" />
 
-  <link rel="stylesheet" href="assets/css/output.css">
+  <link rel="stylesheet" href="assets/css/output.css?v=20250713-v2">
 
   <link rel="canonical" href="https://www.dakreiniginglm.be/">
 
@@ -211,13 +211,13 @@
             </div>
           </div>
           <div class="grid grid-cols-2 gap-4">
-            <img src="assets/img/over_ons/actie.webp" alt="Dakwerken in actie" width="800" height="600" loading="lazy"
+            <img src="assets/img/over_ons/actie.webp?v=20250713-v2" alt="Dakwerken in actie" width="800" height="600" loading="lazy"
               decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/auto_logo.webp" alt="Lander aan het klaarmaken voor dakreiniging" width="800"
+            <img src="assets/img/over_ons/auto_logo.webp?v=20250713-v2" alt="Lander aan het klaarmaken voor dakreiniging" width="800"
               loading="lazy" decoding="async" height="600" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/herstelling.webp" alt="Philippe voert een dakherstelling uit" width="800"
+            <img src="assets/img/over_ons/herstelling.webp?v=20250713-v2" alt="Philippe voert een dakherstelling uit" width="800"
               height="600" loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/dakgoot.webp" alt="Dakreiniging en onderhoud" width="800" height="600"
+            <img src="assets/img/over_ons/dakgoot.webp?v=20250713-v2" alt="Dakreiniging en onderhoud" width="800" height="600"
               loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
           </div>
         </div>
@@ -228,16 +228,16 @@
 
     <!-- Diensten -->
     <section id="diensten" class="py-24 relative min-h-screen bg-cover bg-top bg-fixed md:px-12"
-      style="background-image: url('assets/img/dak_reiniging.webp');">
+      style="background-image: url('assets/img/dak_reiniging.webp?v=20250713-v2');">
       <div class="absolute inset-0 bg-white/60 z-0"></div>
       <div class="relative mx-auto px-6 text-center z-10">
         <h2 class="text-4xl font-bold text-blue-800 mb-12 leading-tight">Onze Diensten voor Dakreiniging en
           Herstellingen</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
 
-          <a href="/diensten/dakherstellingen_hellende_daken.html" target="blank"
+          <a href="/diensten/dakherstellingen-hellende-daken.html" target="blank"
             class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <img src="assets/img/diensten/herstelling.webp" alt="Dakherstellingen hellende daken" loading="lazy"
+            <img src="assets/img/diensten/herstelling.webp?v=20250713-v2" alt="Dakherstellingen hellende daken" loading="lazy"
               decoding="async"
               class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110" />
             <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
@@ -249,9 +249,9 @@
             </div>
           </a>
 
-          <a href="/diensten/dakherstellingen_platte_daken.html" target="blank"
+          <a href="/diensten/dakherstellingen-platte-daken.html" target="blank"
             class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <img src="assets/img/diensten/plat_dak.webp" alt="Dakherstellingen platte daken" loading="lazy"
+            <img src="assets/img/diensten/plat_dak.webp?v=20250713-v2" alt="Dakherstellingen platte daken" loading="lazy"
               decoding="async"
               class="w-full h-64 object-cover object-top transition-transform duration-500 group-hover:scale-110" />
             <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
@@ -263,9 +263,9 @@
             </div>
           </a>
 
-          <a href="/diensten/dakreiniging_ontmossen.html" target="blank"
+          <a href="/diensten/dakreiniging-ontmossen.html" target="blank"
             class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <img src="assets/img/diensten/reiniging.webp" alt="Dakreiniging & Ontmossen" loading="lazy" decoding="async"
+            <img src="assets/img/diensten/reiniging.webp?v=20250713-v2" alt="Dakreiniging & Ontmossen" loading="lazy" decoding="async"
               class="w-full h-64 object-cover object-top transition-transform duration-500 group-hover:scale-110" />
             <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
               <h3 class="text-xl font-semibold mb-2">Dakreiniging & Ontmossen</h3>
@@ -355,7 +355,7 @@
           <div id="customSlider" class="flex transition-transform duration-500 ease-in-out">
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img/recensies/ruddy.webp" alt="Ruddy uit Tienen, klant van Dakreiniging LM"
+                <img src="/assets/img/recensies/ruddy.webp?v=20250713-v2" alt="Ruddy uit Tienen, klant van Dakreiniging LM"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Ruddy uit Tienen</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -369,7 +369,7 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img/recensies/jos.webp" alt="Jos uit Rotselaar, klant van Dakreiniging LM"
+                <img src="/assets/img/recensies/jos.webp?v=20250713-v2" alt="Jos uit Rotselaar, klant van Dakreiniging LM"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Jos uit Rotselaar</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -381,7 +381,7 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img//recensies/ine.webp" alt="Ine uit Rotselaar, tevreden over dakreiniging"
+                <img src="/assets/img//recensies/ine.webp?v=20250713-v2" alt="Ine uit Rotselaar, tevreden over dakreiniging"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Ine uit Rotselaar</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -393,7 +393,7 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img/recensies//jan.webp" alt="Jan uit Holsbeek, tevreden over gevelreiniging"
+                <img src="/assets/img/recensies//jan.webp?v=20250713-v2" alt="Jan uit Holsbeek, tevreden over gevelreiniging"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Jan uit Holsbeek</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -405,7 +405,7 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img//recensies//els.webp" alt="Els uit Bierbeek, dankbaar voor dakinspectie"
+                <img src="/assets/img//recensies//els.webp?v=20250713-v2" alt="Els uit Bierbeek, dankbaar voor dakinspectie"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Els uit Bierbeek</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -418,7 +418,7 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets//img/recensies/wouter.webp" alt="Wouter uit Leuven, tevreden met dakherstelling"
+                <img src="/assets//img/recensies/wouter.webp?v=20250713-v2" alt="Wouter uit Leuven, tevreden met dakherstelling"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Wouter uit Leuven</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -480,14 +480,14 @@
       </div>
     </div>
   </footer>
-  <script src="assets/js/bundle.js" defer></script>
+  <script src="assets/js/bundle.js?v=20250713-v3" defer></script>
   <script type="application/ld+json">
 [
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Dakreiniging LM",
-    "image": "https://www.dakreiniginglm.be/assets/dak.webp",
+    "image": "https://www.dakreiniginglm.be/assets/dak.webp?v=20250713-v2",
     "url": "https://www.dakreiniginglm.be/",
     "telephone": "+32473671944",
     "email": "info@dakreiniginglm.be",
