--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
   <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
   <link rel="manifest" href="/assets/favicon/site.webmanifest?v=20250713-v2" />
 
-  <link rel="stylesheet" href="assets/css/output.css?v=20250713-v2">
+  <link rel="stylesheet" href="/assets/css/output.css?v=20250714">
+  <link rel="preload" as="font" href="/assets/fonts/Montserrat/static/Montserrat-Bold.ttf?v=20250714" type="font/ttf"
+    crossorigin="anonymous">
+  <link rel="preload" as="font" href="/assets/fonts/Roboto/static/Roboto-Regular.ttf?v=20250714" type="font/ttf"
+    crossorigin="anonymous">
+
 
   <link rel="canonical" href="https://www.dakreiniginglm.be/">
 
@@ -211,14 +216,16 @@
             </div>
           </div>
           <div class="grid grid-cols-2 gap-4">
-            <img src="assets/img/over_ons/actie.webp?v=20250713-v2" alt="Dakwerken in actie" width="800" height="600" loading="lazy"
-              decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/auto_logo.webp?v=20250713-v2" alt="Lander aan het klaarmaken voor dakreiniging" width="800"
-              loading="lazy" decoding="async" height="600" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/herstelling.webp?v=20250713-v2" alt="Philippe voert een dakherstelling uit" width="800"
-              height="600" loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/dakgoot.webp?v=20250713-v2" alt="Dakreiniging en onderhoud" width="800" height="600"
+            <img src="assets/img/over_ons/actie.webp?v=20250714" alt="Dakwerken in actie" width="400" height="300"
               loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
+            <img src="assets/img/over_ons/auto_logo.webp?v=20250714" alt="Lander aan het klaarmaken voor dakreiniging"
+              width="400" height="300" loading="lazy" decoding="async"
+              class="rounded-lg shadow-md object-cover aspect-[4/3]">
+            <img src="assets/img/over_ons/herstelling.webp?v=20250714" alt="Philippe voert een dakherstelling uit"
+              width="400" height="533" loading="lazy" decoding="async"
+              class="rounded-lg shadow-md object-cover aspect-[4/3]">
+            <img src="assets/img/over_ons/dakgoot.webp?v=20250714" alt="Dakreiniging en onderhoud" width="400"
+              height="300" loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
           </div>
         </div>
       </div>
@@ -237,8 +244,8 @@
 
           <a href="/diensten/dakherstellingen-hellende-daken.html" target="blank"
             class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <img src="assets/img/diensten/herstelling.webp?v=20250713-v2" alt="Dakherstellingen hellende daken" loading="lazy"
-              decoding="async"
+            <img src="assets/img/diensten/herstelling.webp?v=20250713-v2" alt="Dakherstellingen hellende daken"
+              loading="lazy" decoding="async"
               class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110" />
             <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
               <h3 class="text-xl font-semibold mb-2">Dakherstellingen - Hellende daken</h3>
@@ -251,8 +258,8 @@
 
           <a href="/diensten/dakherstellingen-platte-daken.html" target="blank"
             class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <img src="assets/img/diensten/plat_dak.webp?v=20250713-v2" alt="Dakherstellingen platte daken" loading="lazy"
-              decoding="async"
+            <img src="assets/img/diensten/plat_dak.webp?v=20250713-v2" alt="Dakherstellingen platte daken"
+              loading="lazy" decoding="async"
               class="w-full h-64 object-cover object-top transition-transform duration-500 group-hover:scale-110" />
             <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
               <h3 class="text-xl font-semibold mb-2">Dakherstellingen - Platte daken</h3>
@@ -265,7 +272,8 @@
 
           <a href="/diensten/dakreiniging-ontmossen.html" target="blank"
             class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <img src="assets/img/diensten/reiniging.webp?v=20250713-v2" alt="Dakreiniging & Ontmossen" loading="lazy" decoding="async"
+            <img src="assets/img/diensten/reiniging.webp?v=20250713-v2" alt="Dakreiniging & Ontmossen" loading="lazy"
+              decoding="async"
               class="w-full h-64 object-cover object-top transition-transform duration-500 group-hover:scale-110" />
             <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
               <h3 class="text-xl font-semibold mb-2">Dakreiniging & Ontmossen</h3>
@@ -355,7 +363,8 @@
           <div id="customSlider" class="flex transition-transform duration-500 ease-in-out">
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img/recensies/ruddy.webp?v=20250713-v2" alt="Ruddy uit Tienen, klant van Dakreiniging LM"
+                <img src="/assets/img/recensies/ruddy.webp?v=20250714" width="96" height="96" loading="lazy"
+                  decoding="async" alt="Ruddy uit Tienen, klant van Dakreiniging LM"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Ruddy uit Tienen</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -369,7 +378,8 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img/recensies/jos.webp?v=20250713-v2" alt="Jos uit Rotselaar, klant van Dakreiniging LM"
+                <img src="/assets/img/recensies/jos.webp?v=20250714" width="96" height="96" loading="lazy"
+                  decoding="async" alt="Jos uit Rotselaar, klant van Dakreiniging LM"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Jos uit Rotselaar</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -381,7 +391,8 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img//recensies/ine.webp?v=20250713-v2" alt="Ine uit Rotselaar, tevreden over dakreiniging"
+                <img src="/assets/img/recensies/ine.webp?v=20250714" width="96" height="96" loading="lazy"
+                  decoding="async" alt="Ine uit Rotselaar, tevreden over dakreiniging"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Ine uit Rotselaar</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -393,7 +404,8 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img/recensies//jan.webp?v=20250713-v2" alt="Jan uit Holsbeek, tevreden over gevelreiniging"
+                <img src="/assets/img/recensies//jan.webp?v=20250714" width="96" height="96" loading="lazy"
+                  decoding="async" alt="Jan uit Holsbeek, tevreden over gevelreiniging"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Jan uit Holsbeek</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -405,7 +417,8 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img//recensies//els.webp?v=20250713-v2" alt="Els uit Bierbeek, dankbaar voor dakinspectie"
+                <img src="/assets/img//recensies//els.webp?v=20250714" width="96" height="96" loading="lazy"
+                  decoding="async" alt="Els uit Bierbeek, dankbaar voor dakinspectie"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Els uit Bierbeek</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -418,7 +431,8 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets//img/recensies/wouter.webp?v=20250713-v2" alt="Wouter uit Leuven, tevreden met dakherstelling"
+                <img src="/assets//img/recensies/wouter.webp?v=20250714" width="96" height="96" loading="lazy"
+                  decoding="async" alt="Wouter uit Leuven, tevreden met dakherstelling"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Wouter uit Leuven</h3>
                 <p class="text-gray-600 leading-relaxed flex-grow">
@@ -430,14 +444,22 @@
           </div>
 
           <!-- Controls -->
-          <button id="prevSlide" aria-label="Previous Slide"
+          <!-- Previous Slide Button -->
+          <button id="prevSlide" type="button" aria-label="Go to previous slide"
             class="hidden md:block cursor-pointer absolute top-1/2 left-0 -translate-y-1/2 -translate-x-full bg-blue-100 hover:bg-blue-200 text-blue-800 p-3 rounded-full shadow-md z-20">
-            <i class="fas fa-caret-left"></i>
+            <span aria-hidden="true">
+              <i class="fas fa-caret-left"></i>
+            </span>
           </button>
-          <button id="nextSlide" aria-label="Next Slide"
+
+          <!-- Next Slide Button -->
+          <button id="nextSlide" type="button" aria-label="Go to next slide"
             class="hidden md:block cursor-pointer absolute top-1/2 right-0 -translate-y-1/2 translate-x-full bg-blue-100 hover:bg-blue-200 text-blue-800 p-3 rounded-full shadow-md z-20">
-            <i class="fas fa-caret-right"></i>
+            <span aria-hidden="true">
+              <i class="fas fa-caret-right"></i>
+            </span>
           </button>
+
         </div>
 
         <!-- Pagination -->
@@ -480,7 +502,8 @@
       </div>
     </div>
   </footer>
-  <script src="assets/js/bundle.js?v=20250713-v3" defer></script>
+  <script src="/assets/js/bundle-icon.js?v=20250714" defer></script>
+  <script src="/assets/js/bundle.js?v=20250714" defer></script>
   <script type="application/ld+json">
 [
   {
