--- a/diensten/dakherstellingen-hellende-daken.html
+++ b/diensten/dakherstellingen-hellende-daken.html
@@ -110,7 +110,7 @@
 
     <main role="main">
         <section class="relative bg-cover bg-right h-80 md:h-96"
-            style="background-image: url('/assets/img/dak_herstelling.webp');">
+            style="background-image: url('/assets/img/banner/herstelling_hellend.webp?v=20250714');">
             <div class="absolute inset-0 bg-black/50 flex items-center justify-center">
                 <h1
                     class="text-4xl sm:text-5xl md:text-6xl font-bold text-white text-center drop-shadow-lg pt-24 md:pt-0">
@@ -247,7 +247,8 @@
         </div>
     </footer>
 
-    <script src="../assets/js/bundle-sub.js?v=20250713" defer></script>
+    <script src="/assets/js/bundle-icon.js?v=20250714" defer></script>
+    <script src="/assets/js/bundle-sub.js?v=20250714" defer></script>
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
