--- a/diensten/dakreiniging-ontmossen.html
+++ b/diensten/dakreiniging-ontmossen.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Dakreiniging LM" />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#1D4ED8" />
-  
+
 
   <meta property="og:title" content="Dakreiniging & Ontmossen | Dakreiniging LM" />
   <meta property="og:description"
@@ -113,7 +113,7 @@
 
   <main role="main">
     <section class="relative bg-cover bg-center h-80 md:h-96"
-      style="background-image: url('/assets/img/banner/ontmossen.webp');">
+      style="background-image: url('/assets/img/banner/ontmossen.webp?v=20250714');">
       <div class="absolute inset-0 bg-black/50 flex items-center justify-center">
         <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white text-center drop-shadow-lg pt-24 md:pt-0">
           Dakreiniging &
@@ -250,7 +250,9 @@
     </div>
   </footer>
 
-  <script src="/assets/js/bundle-sub.js?v=20250713" defer></script>
+
+  <script src="/assets/js/bundle-icon.js?v=20250714" defer></script>
+  <script src="/assets/js/bundle-sub.js?v=20250714" defer></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
