--- a/privacy.html
+++ b/privacy.html
@@ -166,7 +166,8 @@
     </div>
   </footer>
 
-  <script src="assets/js/bundle-sub.js?v=20250713" defer></script>
+  <script src="/assets/js/bundle-icon.js?v=20250714" defer></script>
+  <script src="/assets/js/bundle-sub.js?v=20250714" defer></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
